🧪 test: Adição de métodos restantes para diferentes tipos de teste entidade Order