@@ -1,5 +1,6 @@
 package com.ferme.itservices.order;
 
+import com.ferme.itservices.exceptions.RecordNotFoundException;
 import com.ferme.itservices.models.Order;
 import com.ferme.itservices.repositories.OrderRepository;
 import com.ferme.itservices.services.OrderService;
@@ -9,15 +10,17 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
-import static com.ferme.itservices.order.OrderConstants.INVALID_ORDER;
-import static com.ferme.itservices.order.OrderConstants.ORDER_A;
-import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
+import static com.ferme.itservices.client.ClientConstants.FELIPE;
+import static com.ferme.itservices.order.OrderConstants.*;
+import static java.util.Optional.empty;
+import static java.util.Optional.of;
+import static org.assertj.core.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.when;
 
@@ -46,6 +49,29 @@ public class OrderServiceTest {
 	}
 
 	@Test
+	public void updateOrder_WithExistingOrder_ReturnsUpdatedOrder() {
+		when(orderRepository.findById(ORDER_A.getId())).thenReturn(of(ORDER_A));
+		when(orderRepository.save(ORDER_A)).thenReturn(ORDER_A);
+
+		Order updatedOrder = orderService.update(FELIPE.getId(), NEW_ORDER);
+
+		assertEquals(NEW_ORDER.getDeviceName(), updatedOrder.getDeviceName());
+		assertEquals(NEW_ORDER.getDeviceSN(), updatedOrder.getDeviceSN());
+		assertEquals(NEW_ORDER.getProblems(), updatedOrder.getProblems());
+		assertEquals(NEW_ORDER.getClient(), updatedOrder.getClient());
+		assertEquals(NEW_ORDER.getOrderItems(), updatedOrder.getOrderItems());
+	}
+
+	@Test
+	public void updateOrder_WithUnexistingOrder_ReturnsRecordNotFoundException() {
+		when(orderRepository.findById(9L)).thenReturn(empty());
+
+		assertThrows(RecordNotFoundException.class, () -> {
+			orderService.update(9L, NEW_ORDER);
+		});
+	}
+
+	@Test
 	public void getOrder_ByExistingId_ReturnsOrder() {
 		when(orderRepository.findById(1L)).thenReturn(Optional.of(ORDER_A));
 
@@ -56,7 +82,7 @@ public class OrderServiceTest {
 	}
 
 	@Test
-	public void getOrder_ByUnexistingId_ReturnsOrder() {
+	public void getOrder_ByUnexistingId_ReturnsEmpty() {
 		when(orderRepository.findById(1L)).thenReturn(Optional.empty());
 
 		Optional<Order> sut = orderService.findById(1L);
@@ -65,21 +91,20 @@ public class OrderServiceTest {
 	}
 
 	@Test
-	public void listOrders_ReturnsAllOrders() {
-		List<Order> orders = new ArrayList<>() {
-			{ add(ORDER_A); }
-		};
-		when(orderRepository.findAll()).thenReturn(orders);
+	public void listOrders_WhenOrdersExists_ReturnsAllOrders() {
+		when(orderRepository.findAll()).thenReturn(ORDERS);
 
 		List<Order> sut = orderRepository.findAll();
 
 		assertThat(sut).isNotEmpty();
-		assertThat(sut).hasSize(1);
-		assertThat(sut.getFirst()).isEqualTo(ORDER_A);
+		assertThat(sut).hasSize(ORDERS.size());
+		assertThat(sut.get(0)).isEqualTo(ORDER_A);
+		assertThat(sut.get(1)).isEqualTo(ORDER_B);
+		assertThat(sut.get(2)).isEqualTo(ORDER_C);
 	}
 
 	@Test
-	public void listOrders_ReturnsNoOrders() {
+	public void listOrders_WhenOrdersDoesNotExists_ReturnsEmptyList() {
 		when(orderRepository.findAll()).thenReturn(Collections.emptyList());
 
 		List<Order> sut = orderRepository.findAll();
@@ -88,9 +113,19 @@ public class OrderServiceTest {
 	}
 
 	@Test
+	public void deleteOrder_WithExistingId_doesNotThrowAnyException() {
+		assertThatCode(() -> orderService.deleteById(1L)).doesNotThrowAnyException();
+	}
+
+	@Test
 	public void deleteOrder_WithUnexistingId_ThrowsException() {
 		doThrow(new RuntimeException()).when(orderRepository).deleteById(1L);
 
 		assertThatThrownBy(() -> orderService.deleteById(1L)).isInstanceOf(RuntimeException.class);
+	}
+
+	@Test
+	public void deleteAllOrders_doesNotThrowAnyException() {
+		assertThatCode(() -> orderService.deleteAll()).doesNotThrowAnyException();
 	}
 }
